Change the homeEnvSystemVar to "HOMEPATH" on application.yaml For the project can be executed on windows.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,5 +1,5 @@
 file:
-  homeEnvSystemVar: HOME
+  homeEnvSystemVar: HOMEPATH
   inFolderPath: /data/in/
   outFolderPath: /data/out/
   fileEncode: UTF-8
